# FuseLLM

./: .clang-format  .gitignore  .gitmodules  .settings.example.toml  CMakeLists.txt  Cargo.toml  Doxyfile  Goal.md  Readme.md  build.sh  merge.py
.github/workflows/: ci.yml
docs/: design.md  perf.sh
scripts/: debian-build.sh  debian.sh  merge.py
semantic_search_service/: requirements.txt  service.py
src/: config.rs  error.rs  filesystem.rs  lib.rs  llm_api.rs  main.cpp  main.rs  state.rs
src/common/: data.h  utils.hpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/fs/: FuseLLM.cpp  FuseLLM.h  PathParser.cpp  PathParser.h  constants.rs  mod.rs
src/fs/handlers/: config.rs  conversations.rs  mod.rs  models.rs  root.rs  semantic_search.rs
src/handlers/: BaseHandler.h  ConfigHandler.cpp  ConfigHandler.h  ConversationsHandler.cpp  ConversationsHandler.h  ModelsHandler.cpp  ModelsHandler.h  RootHandler.cpp  RootHandler.h  SemanticSearchHandler.cpp  SemanticSearchHandler.h  directory.rs  file_read.rs  file_write.rs  metadata.rs  mod.rs  symlink.rs
src/semantic/: client.rs  mod.rs
src/services/: LLMClient.cpp  LLMClient.h  ZmqClient.cpp  ZmqClient.h  llm_api.rs  mod.rs  search_client.rs
src/state/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  conversation.rs  mod.rs  search_index.rs
src/vfs/: mod.rs  node.rs
test/: CMakeLists.txt  test.md  test.sh  test_main.cpp
test/config/: test_ConfigManager.cpp
test/fs/: test_PathParser.cpp
test/handlers/: test_ConfigHandler.cpp  test_RootHandler.cpp
test/mocks/: MockLLMClient.h
test/services/: test_LLMClient.cpp  test_ZmqClient.cpp
test/state/: test_Session.cpp  test_SessionManager.cpp
tests/: integration_tests.rs
tests/unit_tests/: config_parsing.rs
