[package]
name = "fusellm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.0"
async-std = "1.13.1"
env_logger = "0.11.8"
fuse = "0.3.1"
json = "0.12.4"
libc = "0.2.174"
redis = "0.32.3"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.1"
zmq = "0.10.0"
