[package]
name = "fusellm"
version = "0.1.0"
edition = "2024"
authors = ["Delta-In-Hub"]
description = "Mount your LLM. Everything is a file. Even the LLM."
homepage = "https://github.com/Delta-in-hub/FuseLLM"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
async-std = "1.13.1"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
fuser = "0.15.1"
libc = "0.2.174"
redis = "0.32.3"
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.9.1"
zmq = "0.10.0"
